Update and rename artois-mobilites-abonnement-pass-pass-tadao-pour-les-26-ans.yml to pass-pass-mensuel-pour-les-moins-de-26-ans.yml

--- a/data/benefits/javascript/pass-pass-mensuel-pour-les-moins-de-26-ans.yml
+++ b/data/benefits/javascript/pass-pass-mensuel-pour-les-moins-de-26-ans.yml
@@ -1,4 +1,4 @@
-label: Pass Pass TADAO mensuel pour les moins de 26 ans
+label: Pass Pass mensuel pour les moins de 26 ans
 institution: artois-mobilites
 description: Ce titre vous donne accès en illimité aux transports en commun du
   <a target="_blank" rel="noopener" title="Nouvelle fenêtre"
