--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -214,6 +214,22 @@ fields:
             value: month
           - label: Par an
             value: year
+  field_disability_rate: &field_disability_rate
+    label: Taux d'incapacité
+    name: disability_rate
+    widget: object
+    fields:
+      - label: Valeurs
+        name: values
+        widget: select
+        required: false
+        options:
+          - label: Inférieur à 50%
+            value: disability_under_50
+          - label: Entre 50% et 80%
+            value: disability_50_to_80
+          - label: Supérieur à 80%
+            value: disability_over_80
   field_formation_sanitaire_social: &field_formation_sanitaire_social
     <<: *field_empty
     label: En formation sanitaire et sociale
@@ -706,6 +722,18 @@ fields:
             collapsed: false
             types:
               - *field_age
+      - label: En situation de handicap
+        name: situation_handicap
+        widget: object
+        fields:
+          - label: Conditions à satisfaire simultanément
+            label_singular: Condition à satisfaire
+            name: conditions
+            default: []
+            widget: list
+            collapsed: false
+            types:
+              - *field_disability_rate
   field_private_benefit: &field_private_benefit
     label: Masquer l'aide
     name: private
