Ajout d'un type d'institution dans config.yml

--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -16,7 +16,7 @@ slug:
   encoding: ascii
   clean_accents: true
 
-# local_backend: true
+local_backend: true
 publish_mode: editorial_workflow
 
 root: ../../..
@@ -932,3 +932,20 @@ collections:
         widget: hidden
         required: false
       - *field_benefit_position
+  - name: institution_types
+    label: Type d'Institutions
+    label_singular: institution type
+    identifier_field: name
+    folder: "data/institution_types"
+    create: true
+    delete: false
+    editor:
+      preview: false
+    slug: "{{name}}"
+    extension: yml
+    fields:
+      - label: Nom de votre type institution
+        hint: Commune, EPCI, CAF, MSA, autres, etc.
+        name: name
+        widget: string
+
