update: utilise epci plutôt que code postaux

--- a/data/benefits/javascript/intercommunalite_bordeaux-tarification-solidaire-des-transports.yml
+++ b/data/benefits/javascript/intercommunalite_bordeaux-tarification-solidaire-des-transports.yml
@@ -9,36 +9,9 @@ conditions_generales:
     operator: ">"
     value: 942
     period: month
-  - type: communes
+  - type: epcis
     values:
-      - 33063
-      - 33281
-      - 33318
-      - 33522
-      - 33550
-      - 33449
-      - 33039
-      - 33192
-      - 33119
-      - 33162
-      - 33069
-      - 33249
-      - 33075
-      - 33167
-      - 33003
-      - 33056
-      - 33200
-      - 33519
-      - 33312
-      - 33013
-      - 33096
-      - 33273
-      - 33376
-      - 33032
-      - 33065
-      - 33004
-      - 33434
-      - 33487
+      - 243300316
 profils:
   - type: situation_handicap
     conditions:
