--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -214,9 +214,9 @@ fields:
             value: month
           - label: Par an
             value: year
-  field_disability_rate: &field_disability_rate
+  field_taux_incapacite: &field_taux_incapacite
     label: Taux d'incapacité
-    name: disability_rate
+    name: taux_incapacite
     widget: object
     fields:
       - label: Valeurs
@@ -225,11 +225,11 @@ fields:
         multiple: true
         options:
           - label: Inférieur à 50%
-            value: disability_under_50
+            value: inferieur_50
           - label: Entre 50% et 80%
-            value: disability_50_to_80
+            value: entre_50_et_80
           - label: Supérieur à 80%
-            value: disability_over_80
+            value: superieur_80
   field_formation_sanitaire_social: &field_formation_sanitaire_social
     <<: *field_empty
     label: En formation sanitaire et sociale
@@ -733,7 +733,7 @@ fields:
             widget: list
             collapsed: false
             types:
-              - *field_disability_rate
+              - *field_taux_incapacite
   field_private_benefit: &field_private_benefit
     label: Masquer l'aide
     name: private
