fix: permet de cibler les personnes en situation de handicap sans ajouter de taux

--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -223,6 +223,7 @@ fields:
         name: values
         widget: select
         multiple: true
+        required: false
         options:
           - label: Inférieur à 50%
             value: inferieur_50
