--- a/data/benefits/javascript/intercommunalite_bordeaux-tarification-solidaire-des-transports.yml
+++ b/data/benefits/javascript/intercommunalite_bordeaux-tarification-solidaire-des-transports.yml
@@ -19,7 +19,7 @@ profils:
       - type: taux_incapacite
         values:
           - entre_50_et_80
-          - superieur_80
+          - superieur_ou_egal_80
 type: bool
 periodicite: ponctuelle
 link: https://tarificationsolidaire.bordeaux-metropole.fr/Accueil.aspx
