Ajout d'une contrainte géographique avec au moins une valeur

--- a/data/benefits/javascript/intercommunalite_bordeaux-tarification-solidaire-des-transports-bordeaux-metropole-1.yml
+++ b/data/benefits/javascript/intercommunalite_bordeaux-tarification-solidaire-des-transports-bordeaux-metropole-1.yml
@@ -5,6 +5,9 @@ description: La tarification solidaire offre la gratuité annuelle ou des
   calculées selon le niveau de ressources de la famille.
 prefix: la
 conditions_generales:
+  - type: epcis
+    values:
+      - "33"
   - type: quotient_familial
     operator: ">"
     period: month
