Ajouter "en situation de handicap" comme profil dans l'outil de contribution (#3513)
* update: ajoute le critère situation de handicap dans l'outil de contribution

* update: ajoute la tarification solidaire des transports pour la Métropole de Bordeaux

* update: ajoute un filtre géographique

* update: utilise epci plutôt que code postaux

* update: cible epci et plusieurs taux d'invalidité

* update: met à jour la description pour correspondre à l'aide

* chore: renomme les champs en français

* fix: permet de cibler les personnes en situation de handicap sans ajouter de taux

* fix: inclus le taux d'incapcité exactement égal à 0.5

* chore: détail les taux d'invalidité pour supprimer de l'ambiguité

* fix: l'AAH est conditionné à un taux supérieur ou égal à 80 OU à une restriction d'accès à l'emploi

* Update profil.js

--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -214,6 +214,23 @@ fields:
             value: month
           - label: Par an
             value: year
+  field_taux_incapacite: &field_taux_incapacite
+    label: Taux d'incapacité
+    name: taux_incapacite
+    widget: object
+    fields:
+      - label: Valeurs
+        name: values
+        widget: select
+        multiple: true
+        required: false
+        options:
+          - label: Inférieur à 50%
+            value: inferieur_50
+          - label: Supérieur ou égal à 50% et inférieur à 80%
+            value: entre_50_et_80
+          - label: Supérieur ou égal à 80%
+            value: superieur_ou_egal_80
   field_formation_sanitaire_social: &field_formation_sanitaire_social
     <<: *field_empty
     label: En formation sanitaire et sociale
@@ -706,6 +723,18 @@ fields:
             collapsed: false
             types:
               - *field_age
+      - label: En situation de handicap
+        name: situation_handicap
+        widget: object
+        fields:
+          - label: Conditions à satisfaire simultanément
+            label_singular: Condition à satisfaire
+            name: conditions
+            default: []
+            widget: list
+            collapsed: false
+            types:
+              - *field_taux_incapacite
   field_private_benefit: &field_private_benefit
     label: Masquer l'aide
     name: private
