--- a/data/benefits/javascript/caf-drome-aide-bafa-session-generale.yml
+++ b/data/benefits/javascript/caf-drome-aide-bafa-session-generale.yml
@@ -1,33 +1,31 @@
 label: aide locale au BAFA pour une session de formation générale
 institution: caf_drome
-description: >
-  L'aide au BAFA pour une session de formation générale est une aide locale mise
-  à disposition par la CAF de la Drôme pour vous aider à financer votre session
-  en complément de l'aide
-  nationale apportée par la CAF.
-conditions:
-  - Etre allocataire de la Caf de la Drôme au moment du stage (ou enfant d'un
-    allocataire drômois).
-  - Ne pas avoir déjà obtenu la totalité du financement du Bafa par d'autres
-    organismes.
+description: L'aide au BAFA pour une session de formation générale est une aide
+  locale mise à disposition par la CAF de la Drôme pour vous aider à financer
+  votre session en complément de l'aide nationale apportée par la CAF.
+prefix: l’
 conditions_generales:
   - type: age
     operator: ">="
-    value: 16
+    value: 17
   - type: departements
     values:
       - "26"
   - type: quotient_familial
     period: month
-    value: 750
-    operator: "<="
+    value: 785
+    operator: <=
 profils: []
-link: https://www.caf.fr/allocataires/caf-de-la-drome/offre-de-service/jeune-de-11-a-25-ans/aide-pour-passer-le-bafa
-form: https://www.caf.fr/sites/default/files/caf/261/offre-de-service/enfance-jeunesse/aides-projets-jeunes-bafa/demande-aide-session-formation-generale-bafa2021.pdf
-instructions: https://www.caf.fr/allocataires/caf-de-la-drome/offre-de-service/jeune-de-11-a-25-ans/aide-pour-passer-le-bafa
-prefix: l’
+conditions:
+  - Etre allocataire de la Caf de la Drôme au moment du stage (ou enfant d'un
+    allocataire drômois).
+  - Ne pas avoir déjà obtenu la totalité du financement du Bafa par d'autres
+    organismes.
+interestFlag: _interetBafa
 type: float
 unit: €
 periodicite: ponctuelle
 montant: 250
-interestFlag: _interetBafa
+link: https://www.caf.fr/allocataires/caf-de-la-drome/offre-de-service/vie-professionnelle/entree-dans-le-vie-active/aide-financiere-pour-passer-le-bafa
+form: https://www.caf.fr/sites/default/files/medias/261/allocataire/vie-professionnelle/formulaire-%20bafa-formation-generale.pdf
+instructions: https://www.caf.fr/allocataires/caf-de-la-drome/offre-de-service/vie-professionnelle/entree-dans-le-vie-active/aide-financiere-pour-passer-le-bafa
