--- a/data/benefits/javascript/aide-au-bafa-pour-une-session-de-formation-générale-caf-de-la-haute-savoie.yml
+++ b/data/benefits/javascript/aide-au-bafa-pour-une-session-de-formation-générale-caf-de-la-haute-savoie.yml
@@ -2,19 +2,10 @@ label: aide au BAFA pour une session de formation générale
 institution: caf_haute_savoie
 description: L'aide au BAFA pour une session de formation générale est une aide
   locale mise à disposition par la CAF de la Haute-Savoie pour vous aider à
-  financer votre session en complément de  l'aide
-  nationale apportée par la CAF.  <br> <br> Pour bénéficier de cette aide,
-  contactez directement la CAF de la Haute-Savoie pour connaître les démarches à
-  suivre.
-conditions: []
-link: https://www.caf.fr/allocataires/caf-de-la-haute-savoie/contacter-ma-caf
-instructions: https://www.caf.fr/allocataires/caf-de-la-haute-savoie/contacter-ma-caf
+  financer votre session en complément de l'aide nationale apportée par la CAF.
+  <br> <br> Pour bénéficier de cette aide, contactez directement la CAF de la
+  Haute-Savoie pour connaître les démarches à suivre.
 prefix: l’
-type: float
-unit: €
-periodicite: ponctuelle
-montant: 200
-interestFlag: _interetBafa
 conditions_generales:
   - type: departements
     values:
@@ -23,3 +14,12 @@ conditions_generales:
     operator: ">="
     value: 16
 profils: []
+conditions: []
+interestFlag: _interetBafa
+type: float
+unit: €
+periodicite: ponctuelle
+montant: 200
+link: https://www.caf.fr/allocataires/caf-de-la-haute-savoie/offre-de-service/vie-professionnelle/solidarite-et-insertion
+form: https://www.caf.fr/sites/default/files/medias/741/Enfance-jeunesse/BAFA_032016.pdf
+instructions: https://wwwd.caf.fr/wps/portal/caffr/macaf/contactermacaf#/contactcaf
