--- a/data/benefits/javascript/brest_metropole-abonnement-transports-pour-les-étudiant·es-boursier·es.yml
+++ b/data/benefits/javascript/brest_metropole-abonnement-transports-pour-les-étudiant·es-boursier·es.yml
@@ -21,6 +21,6 @@ periodicite: mensuelle
 legend: au lieu de 30 € / mois
 montant: 16.8
 link: https://www.brest.fr/mes-demarches/famille/demande-de-carte-de-bus-a-tarif-solidaire-pour-les-etudiants-7137.html
-teleservice: https://eservices.brest.fr/Pages/DemandeCarteBusTarifSolidaire.aspx
+teleservice: https://eservice.brest-metropole.fr/demarches/carte-bus-tarif-solidaire/etape1
 instructions: ""
 floorAt: 1
