--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,18 +20,18 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+        uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Cache NPM install files
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-npm-install-packages
         with:
           path: ~/.npm
           key: ${{ runner.os }}-cache-npm-${{ hashFiles('**/package-lock.json') }}
       - name: Cache node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-dependencies
         with:
           path: node_modules
@@ -46,14 +46,14 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Cache Virtual Environment
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: python-dependencies
         with:
           path: .venv
           key: ${{ runner.os }}-cache-python-dependencies-${{ hashFiles('**/openfisca/requirements.txt') }}
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Setup VirtualEnv
@@ -73,9 +73,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Restore node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-dependencies
         with:
           path: node_modules
@@ -90,9 +90,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Restore node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-dependencies
         with:
           path: node_modules
@@ -105,9 +105,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Restore node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-dependencies
         with:
           path: node_modules
@@ -120,21 +120,21 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Restore node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-dependencies
         with:
           path: node_modules
           key: ${{ runner.os }}-cache-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Cache build output
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-build
         with:
           path: dist
           key: ${{ runner.os }}-cache-build-${{ github.sha }}
       - name: Cache server build output
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-server-build
         with:
           path: dist-server
@@ -147,9 +147,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Restore contribuer/node_modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-contribuer-dependencies
         with:
           path: contribuer/node_modules
@@ -158,7 +158,7 @@ jobs:
         if: steps.restore-contribuer-dependencies.outputs.cache-hit != 'true'
         run: cd contribuer && npm ci --prefer-offline --no-audit
       - name: Restore contribuer/.next/cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             ~/.npm
@@ -174,18 +174,18 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+        uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Restore node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-dependencies
         with:
           path: node_modules
           key: ${{ runner.os }}-cache-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Cache Virtual Environment
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: python-dependencies
         with:
           path: .venv
@@ -210,36 +210,36 @@ jobs:
         test: [base, family, handicap, patrimoine, student]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+        uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Restore node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-dependencies
         with:
           path: node_modules
           key: ${{ runner.os }}-cache-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Cache Cypress installation
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-cypress
         with:
           path: ~/.cache/Cypress
           key: ${{ runner.os }}-cache-cypress-${{ hashFiles('**/package-lock.json') }}
       - name: Cache Virtual Environment
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: python-dependencies
         with:
           path: .venv
           key: ${{ runner.os }}-cache-python-dependencies-${{ hashFiles('**/openfisca/requirements.txt') }}
       - name: Cache build output
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-build
         with:
           path: dist
           key: ${{ runner.os }}-cache-build-${{ github.sha }}
       - name: Cache server build output
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-server-build
         with:
           path: dist-server
@@ -256,14 +256,14 @@ jobs:
           cp dist-server/backend/config/continuous-integration.js dist-server/backend/config/production.js
           nohup Xvfb :99 &
       - name: Cypress install
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v4
         if: steps.restore-cypress.outputs.cache-hit != 'true'
         with:
           browser: chrome
           config-file: cypress.config.ts
           runTests: false
       - name: Cypress run
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v4
         with:
           browser: chrome
           config-file: cypress.config.ts
@@ -272,7 +272,7 @@ jobs:
           install: false
           spec: cypress/e2e/${{matrix.test}}.cy.js
       - name: Upload cypress videos
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: cypress-${{matrix.test}}
@@ -286,11 +286,11 @@ jobs:
       status: ${{ steps.stop-early.outputs.status }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - id: stop-early
-        run: if "${GITHUB_WORKSPACE}/.github/has-openfisca-requirement-changes.sh" ; then echo "::set-output name=status::success" ; fi
+        run: if "${GITHUB_WORKSPACE}/.github/has-openfisca-requirement-changes.sh" ; then echo "{status}={success}" >> $GITHUB_OUTPUT ; fi
   test_definition_periods:
     name: Openfisca definition periods tests
     needs:
@@ -305,24 +305,24 @@ jobs:
     timeout-minutes: 15
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+        uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Restore node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-dependencies
         with:
           path: node_modules
           key: ${{ runner.os }}-cache-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Cache Virtual Environment
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: python-dependencies
         with:
           path: .venv
           key: ${{ runner.os }}-cache-python-dependencies-${{ hashFiles('**/openfisca/requirements.txt') }}
       - name: Cache server build output
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: restore-server-build
         with:
           path: dist-server
