--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -262,6 +262,10 @@ jobs:
           browser: chrome
           config-file: cypress.config.ts
           runTests: false
+      - name: Check openfisca status
+        shell: bash
+        run: |
+          curl http://127.0.0.1:2000/variable/parisien
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
